Implemented Whitelist checking
